--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack webpack.dev.config.js --mode production",
     "dev": "webpack --mode=development"
   },
   "author": "",
