--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack  --mode production",
-    "dev": "webpack  --mode=development"
+    "build": "webpack  --mode production ",
+    "dev": "webpack-dev-server  --mode=development --config ./webpack.config.dev.js",
+    "dev1": "webpack  --mode=development --config ./webpack.config.dev.js",
+    "test": "webpack  --env production"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "lodash": "^4.17.21",
-    "webpack": "4",
-    "webpack-cli": "4",
-    "loader-utils": "^1.2.3"
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "loader-utils": "^1.2.3",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "3.10.1",
+    "file-loader": "5.0.2",
+    "url-loader": "3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "lodash": "^4.17.21"
+  }
 }
