--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "file-loader": "5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "loader-utils": "^1.2.3",
+    "url-loader": "3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "3.10.1",
-    "file-loader": "5.0.2",
-    "url-loader": "3.0.0"
+    "webpack-dev-server": "3.10.1"
   },
   "dependencies": {
+    "css-loader": "3.4.2",
     "jquery": "^3.7.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "style-loader": "1.1.3"
   }
 }
