--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-loader": "5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "loader-utils": "^1.2.3",
+    "mini-css-extract-plugin": "1.6.2",
     "url-loader": "3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
