--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "css-loader": "3.4.2",
-    "jquery": "^3.7.1",
+    "jquery": "3",
     "lodash": "^4.17.21",
     "style-loader": "1.1.3"
   }
